<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Dummy String -->
    <string name="yolo">YOLO!</string>
    <string name="hello_world">Hello world!</string>

    <!-- String for app settings -->
    <string name="app_name">Sharloc</string>
    <string name="app_open_bar_title">Home</string>
    <string name="title_activity_nfc">NFC</string>
    <string name="title_activity_qrcode">Barcode Scanner</string>
    <string name="title_activity_register">Create an account</string>
    <string name="title_activity_about">About</string>

    <!-- String for registration page -->
    <string name="registration_msg_failed">Can\'t create an account</string>
    <string name="registration_name_label">Name</string>
    <string name="registration_email_label">E-mail</string>
    <string name="registration_password_label">Password</string>
    <string name="registration_password_reenter_label">Re-enter password</string>
    <string name="registration_button_label">Sign Up</string>

    <!-- Strings for action menu -->
    <string name="action_settings">Settings</string>

    <!-- Strings for settings activity | KALO SETTINGS DIPENCET -->
    <string name="item_help">Help</string>
    <string name="item_about">About</string>
    <string name="item_sign_out">Sign Out</string>
    <string name="sign_out_alert_message">Are you sure?</string>
    <string name="sign_out_alert_title">Logout</string>

    <!-- String for home fragment -->
    <string name="label_current_location">Current Location</string>
    <string name="button_broadcast_location">Broadcast Location</string>
    <string name="action_add_friend">Add Friend</string>
    <string name="action_refresh_friend">Refresh</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="accountDummy1">Yehezkiel Chrisby Gulo</string>
    <string name="emailDummy1">yehezkiel.chrisby@gmail.com</string>
    <string name="broadcast_direction">Press Broadcast Location to share your location</string>

    <!-- Strings for friend fragment -->
    <string name="friend_show_location">Locate On Map</string>
    <string name="friend_request_location">Request Location</string>
    <string name="friend_delete">Delete Friend</string>
    <string name="contact_add_method_qr_code">Add using Barcode Scanner</string>
    <string name="contact_add_method_nfc">Add using NFC</string>
    <string name="qr_code_description">Scan your friend\'s QR Code</string>
    <string name="nfc_description">Align the back of your current devices. Make sure both devices have turned the NFC on.</string>

    <!-- Strings for profile fragment -->
    <string name="profile_qrcode_label">QR Code</string>

    <!-- Strings for buttons login page -->
    <string name="button_sign_in">Sign In</string>

    <!-- Strings for navigation drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="drawer_array">
        <item>Home</item>
        <item>Near Me</item>
        <item>Friends</item>
        <item>My Profile</item>
    </string-array>

    <string name="title_activity_login">LoginActivity</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login_button_label">Login</string>
    <string name="login_register_button_label">Create an Account</string>
    <string name="title_activity_locate_on_map">Map</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="settings_menu_array">
        <item>About</item>
        <item>Sign Out</item>
    </string-array>
    
    <!-- Strnigs for content descriptions -->
    <string name="cd_sharloc_logo">Logo</string>
    <string name="cd_sharloc_name">Name</string>
    <string name="cd_sharloc_about_logo">Sharloc Logo</string>
    <string name="cd_sharloc_about_name">Sharloc Name</string>
    <string name="cd_sharloc_about_tagline">Sharloc Tagline</string>
    <string name="cd_sharloc_about_developer">Sharloc Developer</string>
    <string name="cd_maps_bitmap">Map Image</string>
    
    <!-- String for alert dialog button -->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>

</resources>
