<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
    
    >
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical"
	    tools:context=".RegistrationActivity" >
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="2dp"
	        android:text="@string/registration_name_label" />
	
	    <EditText
	        android:id="@+id/registration_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName" >
	        <requestFocus />
	    </EditText>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="2dp"
	        android:layout_marginTop="@dimen/activity_wide_vertical_margin"
	        android:text="@string/registration_email_label" />
	    
	    <EditText
	        android:id="@+id/registration_email"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textEmailAddress" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="2dp"
	        android:layout_marginTop="@dimen/activity_wide_vertical_margin"
	        android:text="@string/registration_password_label" />
	    
	    <EditText
	        android:id="@+id/registration_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPassword" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="2dp"
	        android:layout_marginTop="@dimen/activity_wide_vertical_margin"
	        android:text="@string/registration_password_reenter_label" />
	    
	    <EditText
	        android:id="@+id/registration_reenter_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPassword" />

	    <Button
	        android:id="@+id/register_submit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/activity_wide_vertical_margin"
	        android:text="@string/registration_button_label" />

	</LinearLayout>
    
    
</ScrollView>