<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEECE1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEECE1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" 
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/sharloc_logo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/logo_image" />

        <ImageView
            android:id="@+id/sharloc_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/logo_text" />
        
        <ProgressBar
            android:id="@+id/login_progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" 
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-5dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/white_flat_bg"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/login_email_hint"
            android:visibility="invisible"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_flat_bg"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/login_password_hint"
            android:visibility="invisible"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button"
            android:visibility="invisible"
            android:text="@string/login_login_button_label" 
            android:onClick="login"/>

        <Button
            android:id="@+id/login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:visibility="invisible"
            android:text="@string/login_register_button_label"
            android:onClick="register" />
    </LinearLayout>

</ScrollView>